@@ -277,7 +277,8 @@ int SettingGetName(int index,SettingName name);
 #define cSetting_sculpt_hb_overlap_base      176
 #define cSetting_legacy_vdw_radii            177
 #define cSetting_sculpt_memory               178
-#define cSetting_INIT                        179
+#define cSetting_connect_mode                179
+#define cSetting_INIT                        180
 
 #endif
 
