@@ -113,6 +113,8 @@ Changes up to 0.80
 
    * fixed duplicate logging with Run command
 
+   * create a simple vector-based fond (0203)
+
 Changes up to 0.79
 
    * solid isosurface rendering algorithm: "isosurface" command
@@ -123,6 +125,8 @@ Changes up to 0.79
    * parser updated to handle (alt A+'') and similar constructs (previously DOA).
 
    * fixed ribbon & cartoon display when N-terminal atom is the CA
+
+   * changes to support MacOSX port (0203)
 
 Changes up to 0.78
 
